--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ button {
     .container-fluid {
         /* display: grid; */
         flex-wrap: wrap;
+        justify-content: center;
 
     }
 
@@ -187,7 +188,8 @@ button {
     .doing-box,
     .done-box {
         width: 90vw;
-        margin-top: 10px;
+        /* margin-top: 10px; */
         max-width: 250px;
+        margin: 5px;
     }
 }
